Update title from git

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Welcome to our website Changed in Fuzzy Spoon3!</a></div>
+				<div class="logo"><a href="#">Welcome to our website Changed Back!</a></div>
 			</header>
 
 		<!-- Main -->
